📝 Ajuste no readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8004:80
     networks:
-      - mynetwork
+      - psitest
 networks:
-  mynetwork:
+  psitest:
     external: true
